[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
version = {source="file", path="asynctor/__init__.py"}

[project]
name = "asynctor"
description = "Async functions to compare with anyio and asyncio, and toolkit to read excel with async/await."
authors = [{ name = "Waket Zheng", email = "waketzheng@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dynamic = [ "version" ]
dependencies = [
    "anyio>=3.7.1",
    "eval-type-backport (>=0.2.2,<1.0.0); python_version < '3.10'",
]
# requires by anyio:
#    "exceptiongroup >= 1.0.2; python_version < '3.11'",
#    "typing_extensions >= 4.1; python_version < '3.11'",
keywords = ["asyncio", "anyio", "aioredis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
redis = ["redis>=5.0.0"]
xls = ["pandas>=2.2.0", "openpyxl>=3.1.0"]
fastapi = ["asynctor[redis]", "fastapi>=0.115.0", "httpx>=0.28.1", "asgi-lifespan>=2.1.0"]
all = ["asynctor[xls,redis,fastapi]"]

[project.urls]
homepage = "https://github.com/waketzheng/asynctor"
repository = "https://github.com/waketzheng/asynctor.git"
"Bug Tracker" = "https://github.com/waketzheng/asynctor/issues"

[dependency-groups]
dev = [
    "fast-dev-cli>=0.15.1",
    "types-redis>=4.6.0.20241004",
    "pandas-stubs>=2.2.0",
    "bandit>=1.8.6",
    "pytest-mock>=3.14.1",
    "fastapi-cdn-host>=0.9.1",
    "uvicorn>=0.34.3",
    "exceptiongroup>=1.3.0",
    "typing-extensions>=4.14.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"scripts/test.py" = ["E501"]
"scripts/*.py" = ["UP009","UP032"]
"asynctor/compat.py" = ["UP031", "SIM102"]
"tests/test_compat.py" = ["B018", "F632"]

[tool.mypy]
pretty = true
python_version = "3.9"
check_untyped_defs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = [
    'tomli',
    'tomllib',
]
ignore_missing_imports = true

[tool.coverage.run]
source = ["asynctor"]
omit = [
    # omit anything in a .cache directory anywhere
    "*/.cache/*",
    # omit everything in /usr
    "/usr/*",
    # omit this single file
    "examples/fastapi/conftest.py",
    "_types.py",
]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_also = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.pdm.scripts]
start = {composite = ["pre-commit install", "deps"]}
pypi = 'pdm run python scripts/uv_pypi.py {args}'
up = {composite = ['uv lock --upgrade', 'uv sync --frozen --inexact --all-extras', 'pypi']}
tree = 'pdm list --tree {args}'
deps = 'pdm run python scripts/deps.py --uv {args}'
prod = 'uv sync --no-dev {args}'
fresh = {composite = ["up", "deps --uv", "pypi"]}
test = 'pdm run fast test {args}'
style = {composite = ["ruff format", "ruff check --fix {args}"]}
check = 'pdm run fast check {args}'
lint = 'pdm run fast lint {args}'
tag = {composite = ["deps", "pypi --quiet", "pdm run fast tag {args}"]}
bump = {composite = ["deps", "pypi --quiet", "pdm run fast bump patch --commit {args}"]}
ci = {composite = ["deps", "check", "test"]}
release = {composite = ["bump", "tag"]}
