[project]
name = "asynctor"
description = "Async functions to compare with anyio and asyncio, and toolkit to read excel with async/await."
authors = [{ name = "Waket Zheng", email = "waketzheng@gmail.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dynamic = [ "version" ]
dependencies = [
    "anyio>=3.7.1",
]
# requires by anyio:
#    "exceptiongroup >= 1.0.2; python_version < '3.11'",
#    "typing_extensions >= 4.1; python_version < '3.11'",
keywords = ["asyncio", "anyio", "aioredis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Typing :: Typed",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]

[project.optional-dependencies]
toml = ["tomli>=2.2.1; python_version < '3.11'"]
redis = ["redis>=5.0.0"]
xlsx = ["pandas>=2.2.0", "openpyxl>=3.1.0"]
testing = ["httpx>=0.28.1", "asgi-lifespan>=2.1.0"]
fastapi = ["asynctor[redis,testing]", "fastapi>=0.115.0"]
tomli = ["asynctor[toml]"]
xls = ["asynctor[xlsx]"]
all = ["asynctor[xlsx,redis,fastapi,toml,testing]"]

[project.urls]
homepage = "https://github.com/waketzheng/asynctor"
repository = "https://github.com/waketzheng/asynctor.git"
"Bug Tracker" = "https://github.com/waketzheng/asynctor/issues"

[dependency-groups]
dev = [
    "fastdevcli-slim>=0.20.0",
    "fastapi-cdn-host>=0.10.0",
    "uvicorn>=0.34.3",
    "pytest>=8.4.2",
]
lint = [
    "exceptiongroup>=1.3.0; python_version < '3.11'",
    "typing-extensions>=4.14.1; python_version < '3.11'",
    "types-redis>=4.6.0.20241004",
    "pandas-stubs>=2.2.0",
    "bandit>=1.8.6",
    "orjson>=3.11.5",
]
test = [
    "pytest-mock>=3.14.1",
    "coverage>=7.11.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "I",      # https://docs.astral.sh/ruff/rules/#isort-i
    "SIM",    # https://docs.astral.sh/ruff/rules/#flake8-simplify-sim
    "FA",     # https://docs.astral.sh/ruff/rules/#flake8-future-annotations-fa
    "UP",     # https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "RUF100", # https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
]

[tool.ruff.lint.per-file-ignores]
"test_*.py" = ["E501"]
"scripts/test.py" = ["E501"]
"scripts/*.py" = ["UP009","UP032"]
"asynctor/compat.py" = ["UP031", "SIM102"]
"tests/test_compat.py" = ["B018", "F632"]

[tool.mypy]
pretty = true
check_untyped_defs = true
warn_unused_ignores = true
# TODO: remove exclude section when drop support for Python3.10
exclude = ["asynctor/enums.py", "test_enums.py"]

[[tool.mypy.overrides]]
module = [
    'fastapi',
    'fastapi.routing',
    'tomli',
    'tomllib',
    'exceptiongroup',
    'orjson',
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ['tests.test_compat', 'tests/test_enums']
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = "anyio._core._eventloop.current_async_library"
disable_error_code = ["attr-defined"]

[tool.ty.src]
exclude = ["asynctor/enums.py", "tests/test_enums.py"]

[tool.ty.rules]
unused-ignore-comment = "ignore"
unused-type-ignore-comment = "ignore"

[tool.pyright]
# TODO: remove this exclude when dropping support for Python3.10
exclude = ["asynctor/enums.py"]

[tool.coverage.run]
source = ["asynctor"]
omit = [
    # omit anything in a .cache directory anywhere
    "*/.cache/*",
    # omit everything in /usr
    "/usr/*",
    # omit this single file
    "examples/fastapi/conftest.py",
    "_types.py",
]
[tool.coverage.report]
omit = ["*/tests/*", "test_*"]
exclude_also = [
    "pragma: no cover",
    "@overload",
    'if __name__ == "__main__":',
    "if TYPE_CHECKING:",
]

[tool.pdm]
version = {source="file", path="asynctor/__init__.py"}

[tool.pdm.build]
excludes = ["./**/.git", "./**/.*_cache", "examples", "tests"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
